# studying-ai-with-go

01-ai-search/: astar.go  bfs.go  dfs.go  dijkstra.go  gbfs.go  go.mod  helpers.go  image.go  main.go  priority-queue-astar.go  priority-queue-dijkstra.go  priority-queue-gbfs.go
02-ai-search-ii/: cat.go  go.mod  main.go  random.go  robot.go  slam.go  snake.go  spiral.go  world.go
03-knowledge-based-agents/: astar.go  house.json  logic.go  random.go  slam.go  snake.go
03-knowledge-based-agents-propositional-logic/: go.mod  main.go  robot.go  spiral.go  world.go
04-knowledge-based-agents-model-checking/: go.mod  load-csv.go  loan_applicants.csv  main.go  model.go  property.go  risk-property.go  utils.go  verification.go
05-ai-uncertainty-i/: ai.go  board.go  go.mod  helpers.go  human.go  main.go
06-ai-uncertainty-II/: ai.go  card-counter.go  card.go  deck.go  game.go  go.mod  go.sum  helpers.go  main.go  player.go
07-python-ml/: app.py  pyproject.toml
07-python-ml/linear-regression/: app.py  pyproject.toml
07-python-ml/multiple-linear-regression/: config.py  house_data.csv  housing_model.pkl  housing_model_metadata.json  main.py  pyproject.toml
08-go-ml/: Taskfile.yml  config.go  data.go  go.mod  house_data.csv  main.go  model.json  model_handler.go  plot.go  prediction.go  python.json
08-go-ml/model/: linear-regression.go  persistence.go
08-go-ml/utils/: normalize.go  validate.go
08-go-ml/visualizations/: plot.html
09-neural-networks/cats-vs-dogs/: main.py  pyproject.toml
10-nlp-extractive-summarization/: go.work  go.work.sum
(+18 files in other folders)
